# FaceLapse

./: .gitignore  README.md  build.gradle.kts  build_output.txt  build_output_2.txt  build_output_3.txt  build_output_final.txt  count_braces.py  gradle.properties  settings.gradle.kts
.Jules/: palette.md
.github/workflows/: build.yml  release.yml
.jules/: bolt.md  sentinel.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  yuv_encoder.cpp
app/src/main/java/com/facelapse/app/: FaceLapseApplication.kt  MainActivity.kt
app/src/main/java/com/facelapse/app/data/local/: FaceLapseDatabase.kt
app/src/main/java/com/facelapse/app/data/repository/: ProjectRepository.kt  SettingsRepository.kt
app/src/main/java/com/facelapse/app/di/: DatabaseModule.kt
app/src/main/java/com/facelapse/app/domain/: AnimatedGifEncoder.kt  FaceDetectionResult.kt  FaceDetectorHelper.kt  FaceRecognitionHelper.kt  ImageLoader.kt  VideoGenerator.kt
app/src/main/java/com/facelapse/app/domain/mapper/: Mappers.kt
app/src/main/java/com/facelapse/app/domain/model/: Photo.kt  Project.kt
app/src/main/java/com/facelapse/app/ui/home/: HomeScreen.kt  HomeViewModel.kt
app/src/main/java/com/facelapse/app/ui/navigation/: NavGraph.kt  Screen.kt
app/src/main/java/com/facelapse/app/ui/project/: ExportResult.kt  (+5 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/com/facelapse/app/domain/: AnimatedGifEncoderTest.kt  VersioningTest.kt
gradle/: libs.versions.toml
(+7 files in other folders)
